# kubify

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: _release.yaml  build-and-test.yaml  release.yaml
docs/: FeatureBrainstorming.md  FeatureBrainstorming2.md
src/: FileSystemDirectoryReader.h  Graph.cpp  Graph.h  KubifyApp.cpp  KubifyApp.h  MockReader.h  Node.h  Reader.h  main.cpp
src/apps/: ClusterApp.h  ContentsApp.h  KubernetesApp.h
tests/: TestKubifyApp.cpp  TestMockReader.cpp
